GPIB_lang_interfaces/C/GPIB.h



/* Address type (for 488.2 calls) */

typedef short Addr4882_t; /* System dependent: must be 16 bits */

void __stdcall FindRQS       (int boardID, Addr4882_t * addrlist, PSHORT dev_stat);

void __stdcall PPoll         (int boardID, PSHORT result);

void __stdcall PPollConfig   (int boardID, Addr4882_t addr, int dataLine, int lineSense);

void __stdcall PPollUnconfig (int boardID, Addr4882_t * addrlist);

void __stdcall PassControl   (int boardID, Addr4882_t addr);

void __stdcall RcvRespMsg    (int boardID, PVOID buffer, long cnt, int Termination);

void __stdcall ReadStatusByte(int boardID, Addr4882_t addr, PSHORT result);

void __stdcall Receive       (int boardID, Addr4882_t addr, PVOID buffer, long cnt, int Termination);

void __stdcall ReceiveSetup  (int boardID, Addr4882_t addr);

void __stdcall ResetSys      (int boardID, Addr4882_t * addrlist);

void __stdcall Send          (int boardID, Addr4882_t addr, PVOID databuf, long datacnt, int eotMode);

void __stdcall SendCmds      (int boardID, PVOID buffer, long cnt);

void __stdcall SendDataBytes (int boardID, PVOID buffer, long cnt, int eot_mode);

void __stdcall SendIFC       (int boardID);

void __stdcall SendLLO       (int boardID);

void __stdcall SendList      (int boardID, Addr4882_t * addrlist, PVOID databuf, long datacnt, int eotMode);

void __stdcall SendSetup     (int boardID, Addr4882_t * addrlist);

void __stdcall SetRWLS       (int boardID, Addr4882_t * addrlist);

void __stdcall TestSRQ       (int boardID, PSHORT result);

void __stdcall TestSys       (int boardID, Addr4882_t * addrlist, PSHORT results);

void __stdcall Trigger       (int boardID, Addr4882_t addr);

void __stdcall TriggerList   (int boardID, Addr4882_t * addrlist);

void __stdcall WaitSRQ       (int boardID, PSHORT result);