GPIB_lang_interfaces/Delphi/GPIB.PAS


procedure FindRQS(boardID:integer;addrlist:AddrList4882_t;var result:smallint);stdcall;
begin
     FindRQS32(boardID, addrlist, result);
end;

procedure PassControl(boardID:integer;address:Addr4882_t);stdcall;
begin
     PassControl32(boardID, address);
end;

procedure PPoll(boardID:integer;var result:smallint);stdcall;
begin
     PPoll32(boardID, result);
end;

procedure PPollConfig(boardID:integer;address:Addr4882_t;dataline:integer;linesend:integer);stdcall;
begin
     PPollConfig32(boardID, address, dataline, linesend);
end;

procedure PPollUnconfig(boardID:integer;addrlist:AddrList4882_t);stdcall;
begin
     PPollUnconfig32(boardID, addrlist);
end;

procedure RcvRespMsg(boardID:integer;var buffer;count:longint;termination:integer);stdcall;
begin
     RcvRespMsg32(boardID, buffer, count, termination);
end;

procedure ReadStatusByte(boardID:integer;address:Addr4882_t;var result:smallint);stdcall;
begin
     ReadStatusByte32(boardID, address, result);
end;

procedure Receive(boardID:integer;address:Addr4882_t;var buffer;count:longint;termination:integer);stdcall;
begin
     Receive32(boardID, address, buffer, count, termination);
end;

procedure ReceiveSetup(boardID:integer;address:Addr4882_t);stdcall;
begin
     ReceiveSetup32(boardID, address);
end;

procedure ResetSys(boardID:integer;addrlist:AddrList4882_t);stdcall;
begin
     ResetSys32(boardID, addrlist);
end;

procedure Send(boardID:integer;address:Addr4882_t;buffer:string;count:longint;eotmode:integer);stdcall;
begin
     Send32(boardID, address, buffer, count, eotmode);
end;

procedure SendCmds(boardID:integer;buffer:string;count:longint);stdcall;
begin
     SendCmds32(boardID, buffer, count);
end;

procedure SendDataBytes(boardID:integer;buffer:string;count:longint;eot:integer);stdcall;
begin
     SendDataBytes32(boardID, buffer, count, eot);
end;

procedure SendIFC(boardID:integer);stdcall;
begin
     SendIFC32(boardID);
end;

procedure SendList(boardID:integer;addrlist:AddrList4882_t;buffer:string;count:longint;eotmode:integer);stdcall;
begin
     SendList32(boardID, addrlist, buffer, count, eotmode);
end;

procedure SendLLO(boardID:integer);stdcall;
begin
     SendLLO32(boardID);
end;

procedure SendSetup(boardID:integer;addrlist:AddrList4882_t);stdcall;
begin
     SendSetup32(boardID, addrlist);
end;

procedure SetRWLS(boardID:integer;addrlist:AddrList4882_t);stdcall;
begin
     SetRWLS32(boardID, addrlist);
end;

procedure TestSRQ(boardID:integer;var result:smallint);stdcall;
begin
     TestSRQ32(boardID, result);
end;

procedure TestSys(boardID:integer;addrlist:AddrList4882_t;var resultlist);stdcall;
begin
     TestSys32(boardID, addrlist, resultlist);
end;

procedure Trigger(boardID:integer;address:Addr4882_t);stdcall;
begin
     Trigger32(boardID, address);
end;

procedure TriggerList(boardID:integer;addrlist:AddrList4882_t);stdcall;
begin
     TriggerList32(boardID, addrlist);
end;

procedure WaitSRQ(boardID:integer;var result:smallint);stdcall;
begin
     WaitSRQ32(boardID, result);
end;


initialization
LoadDLL;

finalization
FreeDLL;

end.
